--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ venv.bak/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+# *$py.class
